fix photo alignment - compile

--- a/assets/sass/modules/_content.scss
+++ b/assets/sass/modules/_content.scss
@@ -3,6 +3,10 @@
 //--------------------------------------------------------------
 .site-content {
 
+	//User photo on 'About' page.
+	.user-photo {
+		text-align: center;
+	}
 } // .site-content
 
 
